--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -118,19 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="MigrationLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\MigrationLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="WebSite1Help" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\HelpImages\WebSite1Help.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Empty-Banner" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="HybridMode" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\HelpImages\HybridMode.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="EmptyBanner" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Empty-Banner.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="MeshCentral" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\MeshCentral.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="MC2-Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="MC2Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\MC2-Logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="CertMgrForm_Del" xml:space="preserve">
@@ -142,12 +142,6 @@
   <data name="NewAccount1Help" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\HelpImages\NewAccount1Help.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="warning-small" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\warning-small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="MC2-Banner" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\MC2-Banner.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="InternetMode" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\HelpImages\InternetMode.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -157,11 +151,14 @@
   <data name="CertMgrForm_DelStr" xml:space="preserve">
     <value>Delete Selected Certificate?</value>
   </data>
+  <data name="LANMode" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\HelpImages\LANMode.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="MeshServerLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\MeshServerLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="HybridMode" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\HelpImages\HybridMode.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="WarningSmall" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\warning-small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Help20" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Help20.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -172,7 +169,7 @@
   <data name="MsgBox_Import_Cert" xml:space="preserve">
     <value>Cert Import</value>
   </data>
-  <data name="LANMode" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\HelpImages\LANMode.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="MC2Banner" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\MC2-Banner.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
